test/cases/compile_errors/pointer_to_noreturn.zig
fn a() *noreturn {}
export fn entry() void {
    _ = a();
}

// error
//
// :1:9: error: pointer to noreturn not allowed
